# opencv_helper

./: .gitignore  README.md
cmake_utils/: find_edtpdv.cmake
draw_line/: CMakeLists.txt
draw_line/include/: test.h
draw_line/src/: draw_line.cpp
img_crop_lib/: CMakeLists.txt
img_crop_lib/include/: img_crop.h
img_crop_lib/src/: img_crop.cpp
img_proc_lib/: CMakeLists.txt
img_proc_lib/include/: img_proc.h
img_proc_lib/src/: img_proc.cpp
img_show_lib/: CMakeLists.txt
img_show_lib/include/: img_show.h
img_show_lib/src/: img_show.cpp
select_roi_lib/: CMakeLists.txt
select_roi_lib/include/: select_roi.h
select_roi_lib/src/: select_roi.cpp
tester/: CMakeLists.txt
tester/include/: tester.h
tester/src/: tester_main.cpp
